# online-cinema

./: .env.sample  .flake8  README.md  alembic.ini  pyproject.toml
migrations/: env.py
migrations/versions/: 548c9ed4f33d_initial_migration.py  b778fa72227e_add_user_and_token_tables.py
src/: main.py
src/celery_app/: auth.py
src/core/: config.py
src/database/: db.py
src/database/models/: accounts.py
src/routes/: auth.py  user.py
src/schemas/: auth.py  user.py
src/security/: auth.py
src/services/: email.py
src/tasks/: auth.py
src/tests/: conftest.py  test_auth.py  test_user.py
